--- a/system.yml
+++ b/system.yml
@@ -1,8 +1,3 @@
-redis:
-  image: redis
-  ports:
-    - 6379:6379
-
 elasticsearch:
   image: elasticsearch
   command:
@@ -13,50 +8,46 @@ elasticsearch:
 
 influx:
   image: tutum/influxdb:0.9
+  environment:
+    - PRE_CREATE_DB="vidi_metrics"
+    - ADMIN_USER="metrics"
+    - INFLUXDB_INIT_PWD="metrics"
   ports:
     - 8086:8086
     - 8083:8083
-  environment:
-    - PRE_CREATE_DB="seneca_msgstats"
-    - ADMIN_USER="msgstats"
-    - INFLUXDB_INIT_PWD="msgstats"
 
-beanstalkd:
-  image: schickling/beanstalkd
-  ports:
-    - 11300:11300
-mesh:
+nodezoo_mesh:
   build: ../nodezoo/
-  container_name: mesh
+  container_name: nodezoo-mesh
 
-msgstats:
-  build: ../nodezoo/
-  container_name: msgstats
+nodezoo_metrics:
+  build: ../nodezoo-metrics/
+  container_name: nodezoo-metrics
 
-github:
+nodezoo_github:
   build: ../nodezoo-github/
-  container_name: github
+  container_name: nodezoo-github
 
-info:
+nodezoo_info:
   build: ../nodezoo-info/
-  container_name: info
+  container_name: nodezoo-info
 
-npm:
+nodezoo_npm:
   build: ../nodezoo-npm/
-  container_name: npm
+  container_name: nodezoo-npm
 
-search:
+nodezoo_search:
   build: ../nodezoo-search/
-  container_name: search
+  container_name: nodezoo-search
 
-web:
+nodezoo_web:
   build: ../nodezoo-web/
-  container_name: web
+  container_name: nodezoo-web
 
-concorda:
-  build: ../concorda/
-  container_name: concorda
+concorda_web:
+  build: ../concorda-dashboard/
+  container_name: concorda-web
 
-vidi:
+vidi_web:
   build: ../vidi-dashboard/
-  container_name: vidi
+  container_name: vidi-web
