--- a/fuge/system.yml
+++ b/fuge/system.yml
@@ -17,37 +17,37 @@ influx:
     - 8083:8083
 
 nodezoo_base:
-  build: ../nodezoo-base/
+  build: ../node_modules/nodezoo-base/
   container_name: nodezoo_base
 
 nodezoo_metrics:
-  build: ../nodezoo-metrics/
+  build: ../node_modules/nodezoo-metrics/
   container_name: nodezoo_metrics
 
 nodezoo_info:
-  build: ../nodezoo-info/
-  container_name: nodezoo-info
+  build: ../node_modules/nodezoo-info/
+  container_name: nodezoo_info
 
 nodezoo_search:
-  build: ../nodezoo-search/
-  container_name: nodezoo-search
+  build: ../node_modules/nodezoo-search/
+  container_name: nodezoo_search
 
 nodezoo_web:
-  build: ../nodezoo-web/
-  container_name: nodezoo-web
+  build: ../node_modules/nodezoo-web/
+  container_name: nodezoo_web
 
 nodezoo_npm:
-  build: ../nodezoo-npm/
-  container_name: nodezoo-npm
+  build: ../node_modules/nodezoo-npm/
+  container_name: nodezoo_npm
 
 nodezoo_github:
-  build: ../nodezoo-github/
-  container_name: nodezoo-github
+  build: ../node_modules/nodezoo-github/
+  container_name: nodezoo_github
 
 vidi_web:
-  build: ../vidi-dashboard/
+  build: ../node_modules/vidi-dashboard/
   container_name: vidi_web
   
 nodezoo_travis:
-  build: ../nodezoo-travis/
+  build: ../node_modules/nodezoo-travis/
   container_name: nodezoo_travis
