--- a/fuge/system.yml
+++ b/fuge/system.yml
@@ -16,38 +16,53 @@ influx:
     - 8086:8086
     - 8083:8083
 
-nodezoo_base:
-  build: ../node_modules/nodezoo-base/
-  container_name: nodezoo_base
+mesh:
+  build: ../node_modules/seneca-mesh-base/
+  container_name: mesh
 
-nodezoo_metrics:
+
+metrics:
   build: ../node_modules/nodezoo-metrics/
-  container_name: nodezoo_metrics
+  container_name: metrics
 
-nodezoo_info:
+info:
   build: ../node_modules/nodezoo-info/
-  container_name: nodezoo_info
+  container_name: info
 
-nodezoo_search:
+search:
   build: ../node_modules/nodezoo-search/
-  container_name: nodezoo_search
+  container_name: search
 
-nodezoo_npm:
+npm:
   build: ../node_modules/nodezoo-npm/
-  container_name: nodezoo_npm
+  container_name: npm
 
-nodezoo_github:
+github:
   build: ../node_modules/nodezoo-github/
-  container_name: nodezoo_github
+  container_name: github
 
-nodezoo_travis:
+travis:
   build: ../node_modules/nodezoo-travis/
-  container_name: nodezoo_travis
+  container_name: travis
 
-nodezoo_web:
+web:
   build: ../node_modules/nodezoo-web/
-  container_name: nodezoo_web
+  container_name: web
 
-vidi_web:
+concorda:
+  build: ../node_modules/concorda-dashboard/
+  container_name: concorda
+  environment:
+    - SERVICE_HOST=0.0.0.0
+    - PORT=3050
+    - EXTERNAL_API=false
+  env_file:
+    - production.env
+
+vidi:
   build: ../node_modules/vidi-dashboard/
-  container_name: vidi_web
+  container_name: vidi
+  environment:
+    - HOST=0.0.0.0
+    - PORT=3000
+    - START=concorda:true
