--- a/fuge/infrastructure.yml
+++ b/fuge/infrastructure.yml
@@ -1,12 +1,17 @@
-elasticsearch:
+elastic_search:
   image: elasticsearch
-  command:
-    elasticsearch --network.bind_host=0.0.0.0 --network.publish_host=localhost
+  command: elasticsearch --network.bind_host=0.0.0.0 --network.publish_host=localhost
   ports:
     - 9200:9200
     - 9300:9300
 
-influx:
+redis_db:
+  image: sameersbn/redis:latest
+  restart: always
+  ports:
+    - 6379:6379
+
+influx_db:
   image: tutum/influxdb:0.9
   environment:
     - PRE_CREATE_DB="vidi_metrics"
