--- a/fuge/services.yml
+++ b/fuge/services.yml
@@ -1,6 +1,6 @@
-nodezoo_base:
-  build: ../node_modules/nodezoo-base/
-  container_name: nodezoo_base
+nodezoo_mesh:
+  build: ../node_modules/seneca-mesh-base/
+  container_name: nodezoo_mesh
 
 nodezoo_metrics:
   build: ../node_modules/nodezoo-metrics/
@@ -21,6 +21,8 @@ nodezoo_npm:
 nodezoo_github:
   build: ../node_modules/nodezoo-github/
   container_name: nodezoo_github
+  environment:
+    - TOKEN=67af7d1ffa3bbcbcc13fa417a03c3fc1671ea0f4
 
 nodezoo_travis:
   build: ../node_modules/nodezoo-travis/
@@ -28,8 +30,4 @@ nodezoo_travis:
 
 nodezoo_web:
   build: ../node_modules/nodezoo-web/
-  container_name: nodezoo_web
-
-vidi_web:
-  build: ../node_modules/vidi-dashboard/
-  container_name: vidi_web
+  container_name: web
