--- a/fuge/system.yml
+++ b/fuge/system.yml
@@ -1,12 +1,17 @@
-elasticsearch:
+elastic_search:
   image: elasticsearch
-  command:
-    elasticsearch --network.bind_host=0.0.0.0 --network.publish_host=localhost
+  command: elasticsearch --network.bind_host=0.0.0.0 --network.publish_host=localhost
   ports:
     - 9200:9200
     - 9300:9300
 
-influx:
+redis_db:
+  image: sameersbn/redis:latest
+  restart: always
+  ports:
+    - 6379:6379
+
+influx_db:
   image: tutum/influxdb:0.9
   environment:
     - PRE_CREATE_DB="vidi_metrics"
@@ -16,50 +21,36 @@ influx:
     - 8086:8086
     - 8083:8083
 
-mesh:
+nodezoo_mesh:
   build: ../node_modules/seneca-mesh-base/
-  container_name: mesh
+  container_name: nodezoo_mesh
 
-
-metrics:
+nodezoo_metrics:
   build: ../node_modules/nodezoo-metrics/
-  container_name: metrics
+  container_name: nodezoo_metrics
 
-info:
+nodezoo_info:
   build: ../node_modules/nodezoo-info/
-  container_name: info
+  container_name: nodezoo_info
 
-search:
+nodezoo_search:
   build: ../node_modules/nodezoo-search/
-  container_name: search
+  container_name: nodezoo_search
 
-npm:
+nodezoo_npm:
   build: ../node_modules/nodezoo-npm/
-  container_name: npm
+  container_name: nodezoo_npm
 
-github:
+nodezoo_github:
   build: ../node_modules/nodezoo-github/
-  container_name: github
+  container_name: nodezoo_github
   environment:
-    - TOKEN=YOUR_GITHUB_TOKEN_HERE
+    - TOKEN=bf581893518db3c184e42777eb6c429fb44262a0
 
-travis:
+nodezoo_travis:
   build: ../node_modules/nodezoo-travis/
-  container_name: travis
+  container_name: nodezoo_travis
 
-web:
+nodezoo_web:
   build: ../node_modules/nodezoo-web/
   container_name: web
-
-concorda:
-  build: ../node_modules/concorda-dashboard/
-  container_name: concorda
-  environment:
-    - PORT=3050
-
-vidi:
-  build: ../node_modules/vidi-dashboard/
-  container_name: vidi
-  environment:
-    - PORT=3000
-    - START=concorda:true
