See notes, - updated to force run of services and infrastructure seperately, - updated search call to match changes, - removed all uneeded infrastucture and services (for launch), - updated readme to reflect changes, - added env_file support as it has dropped in fuge, - removed services.yml as it is now redundant

--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "private": "true",
   "license": "MIT",
   "dependencies": {
+    "nodezoo-base": "github:nodezoo/nodezoo-base",
     "nodezoo-github": "github:nodezoo/nodezoo-github",
     "nodezoo-info": "github:nodezoo/nodezoo-info",
-    "nodezoo-metrics": "nodezoo/nodezoo-metrics",
     "nodezoo-npm": "github:nodezoo/nodezoo-npm",
     "nodezoo-search": "github:nodezoo/nodezoo-search",
     "nodezoo-travis": "github:nodezoo/nodezoo-travis",
-    "nodezoo-web": "github:nodezoo/nodezoo-web",
-    "nodezoo-base": "github:nodezoo/nodezoo-base"
+    "nodezoo-web": "github:nodezoo/nodezoo-web"
   }
 }
