--- a/fuge/system.yml
+++ b/fuge/system.yml
@@ -4,53 +4,38 @@ elastic_search:
   ports:
     - 9200:9200
     - 9300:9300
-
-redis_db:
-  image: sameersbn/redis:latest
-  restart: always
-  ports:
-    - 6379:6379
-
-influx_db:
-  image: tutum/influxdb:0.9
-  environment:
-    - PRE_CREATE_DB="vidi_metrics"
-    - ADMIN_USER="metrics"
-    - INFLUXDB_INIT_PWD="metrics"
-  ports:
-    - 8086:8086
-    - 8083:8083
-
+    
 nodezoo_base:
   build: ../node_modules/nodezoo-base/
   container_name: nodezoo_base
-
-nodezoo_metrics:
-  build: ../node_modules/nodezoo-metrics/
-  container_name: nodezoo_metrics
+  env_file: ./env/system.env
 
 nodezoo_info:
   build: ../node_modules/nodezoo-info/
   container_name: nodezoo_info
+  env_file: ./env/system.env
 
 nodezoo_search:
   build: ../node_modules/nodezoo-search/
   container_name: nodezoo_search
+  env_file: ./env/system.env
 
 nodezoo_npm:
   build: ../node_modules/nodezoo-npm/
   container_name: nodezoo_npm
+  env_file: ./env/system.env
 
 nodezoo_github:
   build: ../node_modules/nodezoo-github/
   container_name: nodezoo_github
-  environment:
-    - TOKEN=YOUR_TOKEN
-    
+  env_file: ./env/system.env
+
 nodezoo_travis:
   build: ../node_modules/nodezoo-travis/
   container_name: nodezoo_travis
+  env_file: ./env/system.env
 
 nodezoo_web:
   build: ../node_modules/nodezoo-web/
-  container_name: web
+  container_name: nodezoo_web
+  env_file: ./env/system.env
