--- a/sample.env
+++ b/sample.env
@@ -6,3 +6,8 @@
 
 # An api authorization from github, (requires read only rights)
 GITHUB_TOKEN=
+
+## nodezoo-updater
+
+# Limit how many modules are processed by the registryDownload cmd; 0 processes the entire registry
+UPDATER_LIMIT=0
