--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "nodezoo-search": "6.0.0",
     "nodezoo-travis": "6.0.0",
     "nodezoo-web": "6.0.0",
-    "nodezoo-updater": "1.0.0"
+    "nodezoo-updater": "1.0.0",
+    "nodezoo-dequeue": "1.0.0"
   }
 }
