--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "A fuge config for NodeZoo",
   "license": "MIT",
   "dependencies": {
-    "nodezoo-base": "7.0.0",
-    "nodezoo-github": "6.1.0",
-    "nodezoo-info": "6.0.0",
-    "nodezoo-npm": "6.0.0",
-    "nodezoo-search": "6.0.0",
-    "nodezoo-travis": "6.0.0",
-    "nodezoo-web": "6.0.0",
-    "nodezoo-updater": "1.0.0",
-    "nodezoo-dequeue": "1.0.0"
+    "nodezoo-base": "7.0.x",
+    "nodezoo-github": "6.1.x",
+    "nodezoo-info": "6.0.x",
+    "nodezoo-npm": "6.0.x",
+    "nodezoo-search": "6.0.x",
+    "nodezoo-travis": "6.0.x",
+    "nodezoo-web": "6.0.x",
+    "nodezoo-updater": "1.0.x",
+    "nodezoo-dequeue": "1.0.x"
   }
 }
