--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "nodezoo-web": "6.1.x",
     "nodezoo-updater": "1.0.x",
     "nodezoo-dequeue": "1.0.x"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 0"
   }
 }
