--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,20 @@ language: node_js
 
 node_js:
   - 5
+
+cache:
+  directories:
+    - node_modules
+
+after_script:
+  - npm run cov
+
+env:
+  - CXX=g++-4.8
+
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
