--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "nodezoo-travis": "7.1.x",
     "nodezoo-web": "6.1.x",
     "nodezoo-updater": "1.0.x",
-    "nodezoo-dequeue": "1.0.x"
+    "nodezoo-dequeue": "1.0.x",
+    "nodezoo-coveralls": "1.x.x"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 0"
