--- a/package.json
+++ b/package.json
@@ -1,22 +1,20 @@
 {
   "name": "nodezoo-system",
-  "version": "7.0.1",
-  "description": "A fuge config for NodeZoo",
+  "version": "1.0.0-tms-dev",
+  "description": "Shared dependencies for NodeZoo services",
   "license": "MIT",
   "dependencies": {
-    "artillery": "^1.5.2",
-    "nodezoo-base": "7.0.x",
-    "nodezoo-coveralls": "3.x.x",
-    "nodezoo-dequeue": "1.0.x",
-    "nodezoo-github": "6.3.x",
-    "nodezoo-info": "6.0.x",
-    "nodezoo-npm": "7.1.x",
-    "nodezoo-search": "6.1.x",
-    "nodezoo-travis": "7.1.x",
-    "nodezoo-updater": "1.0.x",
-    "nodezoo-web": "6.1.x"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 0"
+    "chairo": "3.0.0",
+    "handlebars": "4.0.6",
+    "hapi": "16.1.0",
+    "inert": "4.1.0",
+    "seneca": "3.3.0",
+    "vision": "4.1.1",
+    "seneca-repl": "1.0.0",
+    "wreck": "10.0.0",
+    "seneca-entity": "2.0.0",
+    "seneca-jsonfile-store": "1.0.0",
+    "seneca-redis-transport": "0.3.0",
+    "lru-cache": "4.0.2"
   }
 }
