grab travis status

--- a/docker/shared/Makefile
+++ b/docker/shared/Makefile
@@ -1,7 +1,7 @@
 build :
 	mkdir -p app
 	cp ../../package.json app
-	docker build -t nodezoo-web-shared .
+	docker build -t nodezoo-shared .
 
 clean :
 	rm *~
