--- a/docker/shared/app/package.json
+++ b/docker/shared/app/package.json
@@ -1,32 +1,24 @@
 {
-  "name": "nodezoo-web",
-  "version": "5.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/rjrodger/nodezoo-web.git"
-  },
-  "author": "",
+  "name": "nodezoo-system",
+  "version": "1.0.0-tms-dev",
+  "description": "Shared dependencies for NodeZoo services",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/rjrodger/nodezoo-web/issues"
-  },
-  "homepage": "https://github.com/rjrodger/nodezoo-web",
   "dependencies": {
     "chairo": "3.0.0",
     "handlebars": "4.0.6",
     "hapi": "16.1.0",
     "inert": "4.1.0",
+    "lru-cache": "4.0.2",
     "seneca": "3.3.0",
-    "seneca-balance-client": "0.6.0",
-    "seneca-mesh": "0.10.0",
-    "seneca-msgstats": "0.2.0",
-    "seneca-repl": "0.3.0",
-    "seneca-zipkin-tracer": "0.1.0",
-    "vision": "4.1.1"
+    "seneca-entity": "2.0.0",
+    "seneca-jsonfile-store": "1.0.0",
+    "seneca-redis-transport": "0.3.0",
+    "seneca-repl": "1.0.0",
+    "trie-prefix-tree": "1.3.0",
+    "vision": "4.1.1",
+    "wreck": "10.0.0"
+  },
+  "devDependencies": {
+    "travis-ci": "^2.1.1"
   }
 }
