--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "handlebars": "4.0.6",
     "hapi": "16.1.0",
     "inert": "4.1.0",
+    "lru-cache": "4.0.2",
     "seneca": "3.3.0",
-    "vision": "4.1.1",
-    "seneca-repl": "1.0.0",
-    "wreck": "10.0.0",
     "seneca-entity": "2.0.0",
     "seneca-jsonfile-store": "1.0.0",
     "seneca-redis-transport": "0.3.0",
-    "lru-cache": "4.0.2"
+    "seneca-repl": "1.0.0",
+    "trie-prefix-tree": "1.3.0",
+    "vision": "4.1.1",
+    "wreck": "10.0.0"
+  },
+  "devDependencies": {
+    "travis-ci": "^2.1.1"
   }
 }
