--- a/docker/shared/app/package.json
+++ b/docker/shared/app/package.json
@@ -16,7 +16,8 @@
     "seneca-repl": "1.0.0",
     "trie-prefix-tree": "1.3.0",
     "vision": "4.1.1",
-    "wreck": "10.0.0"
+    "wreck": "10.0.0",
+    "github": "9.2.0"
   },
   "devDependencies": {
     "travis-ci": "^2.1.1"
