--- a/docker/Makefile
+++ b/docker/Makefile
@@ -2,14 +2,14 @@ build :
 	$(MAKE) -C ./shared build
 	$(MAKE) -C ./stats/graphite-statsd build
 	$(MAKE) -C ./logstash build
-	$(MAKE) -C ../../nodezoo-web/docker/stage build
-	$(MAKE) -C ../../nodezoo-search/docker/stage build
-	$(MAKE) -C ../../nodezoo-suggest/docker/stage build
-	$(MAKE) -C ../../nodezoo-info/docker/stage build
-	$(MAKE) -C ../../nodezoo-npm/docker/stage build
-	$(MAKE) -C ../../nodezoo-github/docker/stage build
-	$(MAKE) -C ../../nodezoo-repl/docker/stage build
-	$(MAKE) -C ../../nodezoo-validate/docker/stage build
+	$(MAKE) -C ../../web/docker/stage build
+	$(MAKE) -C ../../search/docker/stage build
+	$(MAKE) -C ../../suggest/docker/stage build
+	$(MAKE) -C ../../info/docker/stage build
+	$(MAKE) -C ../../npm/docker/stage build
+	$(MAKE) -C ../../github/docker/stage build
+	$(MAKE) -C ../../repl/docker/stage build
+	$(MAKE) -C ../../validate/docker/stage build
 
 .PHONY : build
 
