--- a/package.json
+++ b/package.json
@@ -8,23 +8,24 @@
   },
   "dependencies": {
     "chairo": "3.0.0",
+    "github": "9.2.0",
     "handlebars": "4.0.6",
     "hapi": "16.1.0",
     "inert": "4.1.0",
     "lru-cache": "4.0.2",
     "seneca": "3.4.2",
+    "seneca-balance-client": "0.6.1",
+    "seneca-consul-registry": "^0.1.0",
     "seneca-entity": "2.0.2",
     "seneca-jsonfile-store": "1.0.1",
+    "seneca-mesh": "0.11.0",
     "seneca-redis-transport": "0.3.0",
     "seneca-repl": "1.1.2",
-    "seneca-mesh": "0.11.0",
-    "seneca-balance-client": "0.6.1",
+    "seneca-statsd": "0.1.0",
+    "seneca-zipkin-tracer": "0.2.0",
     "trie-prefix-tree": "1.3.0",
     "vision": "4.1.1",
-    "wreck": "10.0.0",
-    "github": "9.2.0",
-    "seneca-zipkin-tracer": "0.2.0",
-    "seneca-statsd": "0.1.0"
+    "wreck": "10.0.0"
   },
   "devDependencies": {
     "fuge": "^2.0.2",
